--- a/00._Assignments/00._Mandatories/01._Mandatory_1.md
+++ b/00._Assignments/00._Mandatories/01._Mandatory_1.md
@@ -1,9 +1,11 @@
-01a: [Link]
+## Mandatory 1
 
-03a: [Link]
+01a: [Link](https://github.com/LilNiclas/SoftwareIntegration/tree/main/00._Assignments/01a%20%5BIndividual%5D%20Data%20parsing%20servers%20-%20Part%20I)  
 
-04a: [Link]
+03a: [Link](https://github.com/LilNiclas/SoftwareIntegration/tree/main/00._Assignments/03a%20%5BIndividual%5D%20Data%20parsing%20server%20-%20Part%20III)  
 
-04b: [Link]
+04a: [Link](https://github.com/LilNiclas/SoftwareIntegration/tree/main/00._Assignments/04a%20%5BIndividual%5D%20SSE%20Example/01._node)  
 
-06a: [Link]
+04b: [Link](https://github.com/LilNiclas/SoftwareIntegration/tree/main/00._Assignments/04b%20%5BPair%5D%20Database%20granular%20access)  
+
+06a: [Link](https://github.com/LilNiclas/SoftwareIntegration/tree/main/00._Assignments/06a%20%5BIndividual%5D%20WebSocket/01._node)  
