--- a/00._Assignments/00._Mandatories/02._Mandatory_2.md
+++ b/00._Assignments/00._Mandatories/02._Mandatory_2.md
@@ -1,17 +1,17 @@
-## Mandatory 1
+## Mandatory 2
 
-08a: [Link]()
+08a: [Link](https://github.com/LilNiclas/SoftwareIntegration/tree/main/00._Assignments/08a%20%5BIndividual%5D%20WebRTC%20Example)
 
-08b: [Link]()
+08b: [Link](https://github.com/GeoGuessrProject/GeoGuessr-Backend/blob/980cdb37d6945a7493e494a7736c23f8db15f804/documentation/DOCUMENTATION_SETUP.md)
 
-10a: [Link]()
+10a: [Link](https://github.com/LilNiclas/SoftwareIntegration/tree/main/00._Assignments/10a%20%5BIndividual%5D%20Document%20A%20Database)
 
-10b: [Link]()
+10b: [Link](https://github.com/LilNiclas/SoftwareIntegration/tree/main/00._Assignments/10b%20%5BIndividual%2C%20Pairs%2C%20Group%5D%20Migrate%20from%20One%20Database%20to%20Another)
 
-11a: [Link]()
+11a: [Link](https://github.com/LilNiclas/SoftwareIntegration/tree/main/00._Assignments/11a%20%5BIndividual%2CPairs%2CGroup%5D%20Auth%20Integration)
 
-11b: [Link]()
+11b: [Link](https://github.com/LilNiclas/SoftwareIntegration/tree/main/00._Assignments/11b%20%5BIndividual%5D%20Integrate%20with%20payment)
 
-12a: [Link]()
+12a: [Link](https://github.com/LilNiclas/SoftwareIntegration/tree/main/00._Assignments/12a%20%5BPair%5D%20Expose%20and%20Integrate%20with%20a%20Webhook%20System)
 
-13a: [Link]()
+13a: [Link](https://github.com/LilNiclas/SoftwareIntegration/tree/main/00._Assignments/13a%20%5BIndividual%5D%20GraphQL/node_apollo)
